openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: goapp
  name: goapp
  namespace: goapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: goapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: goapp
    spec:
      containers:
      - image: paulovigne/webnar-goapp:CODE-main-7
        name: teste
        resources: {}
status: {}
