openshift/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: goapp
spec:
  path: /
  to:
    kind: Service
    name: goapp
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
